# MachineController

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  file_checks_plan.txt  notes.txt  postBuildTasks.cmake  test_data.txt  todo.txt  update_gui_events.ps1
arduino/: README.md
arduino/GlueController/: GlueController.cpp  GlueController.h  GlueController.ino
arduino/GlueControllerTest/: GlueControllerTest.ino
config/: settings.json
docs/: ArduinoProtocolCompleteExamples.txt  ArduinoProtocolExample.md  ArduinoProtocolQuickStart.txt  BuildConfiguration.md  TODO.md  TimersOptionA_RefactorPlan.txt  arduino_glue_controller.md
include/: Config.h  Event.h  EventQueue.h  Logger.h  Logic.h  MainLogic.h  Timer.h  oldEventQueue.h
include/communication/: ArduinoProtocol.h  CommunicationInterface.h  RS232Communication.h  TCPIPCommunication.h
include/dataFile/: BarcodeFile.h  DataFile.h
include/gui/: MainWindow.h  SettingsWindow.h
include/io/: IOChannel.h  IOInterface.h  PCI7248IO.h
include/machine/: DefaultMachineCoreFactory.h  MachineCore.h
include/utils/: CompilerMacros.h
old/: PCI7248IO.cpp.o3-high-working  PCI7248IO.h-o3-high-working  notCompilingPCI7248IO.cpp  notCompilingPCI7248IO.h  old_ArduinoProtocolExample.md
old/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/: Config.cpp  Logic.cpp  MainLogic.cpp  main.cpp
src/communication/: ArduinoProtocol.cpp  RS232Communication.cpp  TCPIPCommunication.cpp
src/dataFile/: BarcodeFile.cpp  DataFile.cpp
src/gui/: MainWindow.cpp  MainWindow.ui  SettingsWindow.cpp  SettingsWindow.cpp.bak  SettingsWindow.cpp.new  SettingsWindow.ui
src/io/windows/: PCI7248IO.cpp
src/machine/: DefaultMachineCore.cpp
uiFiles/: main_window.ui  settings_window.ui  to be implemented
